# room4doom

./: Cargo.toml  justfile
.githooks/: pre-commit
game-exe/: Cargo.toml
game-exe/src/: cli.rs  config.rs  d_main.rs  loop_sdl2.rs  loop_winit.rs  main.rs
gameplay/: Cargo.toml
gameplay/src/: bsp_trace.rs  sector_ext.rs  thinker.rs
gameplay/src/env/: ceiling.rs  doors.rs  floor.rs  lights.rs  platforms.rs  specials.rs
gameplay/src/lang/: english.rs
gameplay/src/level/: mod.rs  tests.rs
gameplay/src/thing/: enemy.rs  interact.rs  mod.rs  movement.rs  shooting.rs
gamestate-traits/src/: lib.rs
gamestate/src/: lib.rs
level/: Cargo.toml
level/src/: lib.rs  map_defs.rs  special_encode.rs
level/src/bsp3d/: build.rs  node.rs
level/tests/: bsp3d_e1m1_mover_test.rs  bsp3d_e1m1_tests.rs  bsp3d_e1m2_door_test.rs  bsp3d_e1m2_test.rs  bsp3d_e1m3_stairs_test.rs  bsp3d_e6m1_sigil2_test.rs  bsp3d_eviternity_sky_test.rs  bsp3d_geometry.rs  bsp3d_movers.rs
math/src/: fixed_point.rs  intercept.rs
pic-data/src/: colour.rs  lib.rs
pic-data/src/pic/: mod.rs
pic-data/src/voxel/: mod.rs
render/backend/: Cargo.toml
render/backend/src/: lib.rs  pixels_backend.rs  sdl2_backend.rs  softbuffer_backend.rs  wgpu_backend.rs
render/common/src/: lib.rs  scene_target.rs  wipe.rs
render/software25d/benches/: render_bench.rs
render/software25d/src/: bsp.rs  defs.rs  segs.rs  things.rs
render/software25d/tests/: golden_cross_path.rs
render/software3d/benches/: render_bench.rs
render/software3d/src/: lib.rs
render/software3d/src/rasterizer/: debug.rs  polygon.rs  sampling.rs  voxel.rs
render/software3d/tests/: golden_cross_path.rs
tools/rbsp/src/: rbsp_lump.rs  wad_io.rs
tools/voxel-viewer/src/: main.rs
ui/src/: hud_messages.rs  menu.rs
ui/src/finale/: mod.rs
ui/src/intermission/: mod.rs
ui/src/statusbar/: mod.rs
wad/src/: types.rs  wad.rs
wad/tests/: iterator_tests.rs
(+5 files in other folders)
